--- a/index.html
+++ b/index.html
@@ -16,8 +16,15 @@
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        <a href="./lasagna.html">lasagna.html</a>
-        
+        <header id="header">
+            <h1>My favorite recipes</h1>
+        </header>
+        <ul>
+            <a href="./beefstew.html">beefstew.html</a>
+            <a href="./mushroomsoup.html">mushroomsoup.html</a>
+            <a href="./banhmi.html">banhmi.html</a>   
+        </ul>
         <script src="" async defer></script>
+        <a href="#header">Return to top</a>
     </body>
 </html>
